# Pytorch-Filters

./: .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements.txt
pytorch_filters/: __init__.py  main.py
